Updated the bus client config

--- a/BuildArtifacts/ServiceBusClient.config
+++ b/BuildArtifacts/ServiceBusClient.config
@@ -1,17 +1,18 @@
-﻿<castle>
-  <facilities>
-    <facility id="one.way.rhino.esb" >
-      <messages>
-        <add name="Teleopti.Interfaces.Messages.Requests"
-             endpoint="rhino.queues://localhost:2202/request"/>
-        <add name="Teleopti.Interfaces.Messages.General"
-             endpoint="rhino.queues://localhost:2203/general"/>
-        <add name="Teleopti.Interfaces.Messages.Denormalize"
-             endpoint="rhino.queues://localhost:2204/denormalize"/>
-      </messages>
-      <security>
-        <key>f/gdDWbDqHRvpqdRbTs3mxhGdZh9qCaDrasxJGXl+5s=</key>
-      </security>
-    </facility>
-  </facilities>
-</castle>
+﻿<configuration>
+  <configSections>
+    <section name="rhino.esb" type="Rhino.ServiceBus.Config.BusConfigurationSection, Rhino.ServiceBus"/>
+  </configSections>
+  <rhino.esb>
+    <messages>
+      <add name="Teleopti.Interfaces.Messages.Requests"
+           endpoint="rhino.queues://localhost:2202/request"/>
+      <add name="Teleopti.Interfaces.Messages.General"
+           endpoint="rhino.queues://localhost:2203/general"/>
+      <add name="Teleopti.Interfaces.Messages.Denormalize"
+           endpoint="rhino.queues://localhost:2204/denormalize"/>
+    </messages>
+    <security>
+      <key>f/gdDWbDqHRvpqdRbTs3mxhGdZh9qCaDrasxJGXl+5s=</key>
+    </security>
+  </rhino.esb>
+</configuration>
