Preferences now maps styles like week schedule

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/Teleopti.Ccc.WebTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/Teleopti.Ccc.WebTest.csproj
@@ -99,7 +99,7 @@
     <Compile Include="Controllers\TeamScheduleControllerTest.cs" />
     <Compile Include="Core\Authentication\Services\RouteAreaRedirectorTest.cs" />
     <Compile Include="Core\Common\DataProvider\SchedulePersonProviderTest.cs" />
-    <Compile Include="Core\Mapping\FuncResolver.cs" />
+    <Compile Include="Core\Mapping\FakeMappingDependency.cs" />
     <Compile Include="Core\Portal\FakePermissionProvider.cs" />
     <Compile Include="Core\Portal\PortalViewModelFactoryPreferencesTest.cs" />
     <Compile Include="Core\Portal\PortalViewModelFactoryStudentAvailabilityTest.cs" />
