--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -808,6 +808,7 @@
     <Compile Include="Security\License.cs" />
     <Compile Include="Security\Matrix\MatrixPermissionHolder.cs" />
     <Compile Include="Security\Matrix\PersonRoleResolver.cs" />
+    <Compile Include="Security\ModifyPassword.cs" />
     <Compile Include="Security\OneWayEncryption.cs">
       <SubType>Code</SubType>
     </Compile>
