--- a/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
+++ b/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Domain\IDayOffOptimizerConflictHandler.cs" />
     <Compile Include="Domain\IDayOffOptimizerValidator.cs" />
     <Compile Include="Domain\IAuditSetter.cs" />
+    <Compile Include="Domain\ILicenseStatus.cs" />
     <Compile Include="Domain\ILightPerson.cs" />
     <Compile Include="Domain\INightRestWhiteSpotSolverService.cs" />
     <Compile Include="Domain\IOptimizationPreferences.cs" />
@@ -708,6 +709,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Infrastructure\ILicenseService.cs" />
+    <Compile Include="Infrastructure\ILicenseStatusXml.cs" />
     <Compile Include="Infrastructure\ILoadPasswordPolicyService.cs" />
     <Compile Include="Infrastructure\IMainReference.cs" />
     <Compile Include="Infrastructure\IMultiplicatorDefinitionSetRepository.cs" />
