--- a/Teleopti.Analytics/Teleopti.Analytics.Etl.TransformerTest/Teleopti.Analytics.Etl.TransformerTest.csproj
+++ b/Teleopti.Analytics/Teleopti.Analytics.Etl.TransformerTest/Teleopti.Analytics.Etl.TransformerTest.csproj
@@ -129,6 +129,7 @@
     <Compile Include="FakeData\OvertimeFactory.cs" />
     <Compile Include="Job\Jobs\RequestJobTest.cs" />
     <Compile Include="Job\Steps\FactScheduleDeviationJobStepTest.cs" />
+    <Compile Include="Job\Steps\LicenseCheckJobStepTest.cs" />
     <Compile Include="Job\Steps\RequestJobsTest.cs" />
     <Compile Include="Job\Steps\ScheduleDayRestrictorTest.cs" />
     <Compile Include="OvertimeTransformerTest.cs" />
