--- a/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
+++ b/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Domain\IAuditSetter.cs" />
     <Compile Include="Domain\ILightPerson.cs" />
     <Compile Include="Domain\INightRestWhiteSpotSolverService.cs" />
+    <Compile Include="Domain\IOpenForWork.cs" />
     <Compile Include="Domain\IOptimizationPreferences.cs" />
     <Compile Include="Domain\IPersonFinderDisplayRow.cs" />
     <Compile Include="Domain\IPersonFinderSearchCriteria.cs" />
@@ -596,6 +597,7 @@
     <Compile Include="Domain\MeetingChangedEntity.cs" />
     <Compile Include="Domain\MinMaxStaffBroken.cs" />
     <Compile Include="Domain\MultipleBool.cs" />
+    <Compile Include="Domain\OpenForWork.cs" />
     <Compile Include="Domain\OptimizationRestriction.cs" />
     <Compile Include="Domain\JobResultProgress.cs" />
     <Compile Include="Domain\PositiveTimeSpan.cs" />
