SSL in sdk, admin client and service bus.

--- a/BuildArtifacts/SDKWeb.config
+++ b/BuildArtifacts/SDKWeb.config
@@ -245,14 +245,15 @@
             <dns value="localhost"/>
           </identity>
         </endpoint>
-
+		<!--WISEMETA: binding="[SDK_SSL_MEX_BINDING]"-->
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
     </services>
     <bindings>
       <basicHttpBinding>
         <binding name="basicHttpBinding_withSize" maxReceivedMessageSize="1000000" maxBufferSize="1000000">
-          <security mode="TransportCredentialOnly">
+          <!--WISEMETA: mode="[SDK_SSL_SECURITY_MODE]"-->
+		  <security mode="TransportCredentialOnly">
             <!--WISEMETA: clientCredentialType="[SDK_CRED_PROT]"-->
             <transport clientCredentialType="Ntlm" />
           </security>
@@ -262,7 +263,8 @@
     <behaviors>
       <serviceBehaviors>
         <behavior name="Host2.TeleoptiCccSdkServiceBehavior">
-          <serviceMetadata httpGetEnabled="true"/>
+		  <!--WISEMETA: httpGetEnabled="[SDK_SSL_HTTPGET] httpsGetEnabled=[SDK_SSL_HTTPSGET]"-->
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
           <serviceDebug includeExceptionDetailInFaults="true"/>
           <serviceThrottling maxConcurrentCalls="1000" maxConcurrentInstances="1000" maxConcurrentSessions="5000000"/>
           <dataContractSerializer maxItemsInObjectGraph="2147483646" />
