--- a/BuildArtifacts/AppRaptor.config
+++ b/BuildArtifacts/AppRaptor.config
@@ -36,6 +36,7 @@
                  allowCookies="true"
                  maxReceivedMessageSize="1000000" openTimeout="00:02:00"
 	         sendTimeout="00:02:00">
+		  <!--WISEMETA: mode="[SDK_SSL_SECURITY_MODE]"-->
           <security mode="TransportCredentialOnly">
             <!--WISEMETA: clientCredentialType="[SDK_CRED_PROT]"-->
             <transport clientCredentialType="Ntlm" />
