--- a/BuildArtifacts/ServiceBusHost.config
+++ b/BuildArtifacts/ServiceBusHost.config
@@ -10,6 +10,7 @@
       <basicHttpBinding>
         <binding name="BasicHttpBinding_WithSession" openTimeout="00:02:00"
           sendTimeout="00:02:00" maxReceivedMessageSize="500000000" receiveTimeout="05:30:00">
+		  <!--WISEMETA: mode="[SDK_SSL_SECURITY_MODE]"-->
           <security mode="TransportCredentialOnly">
             <!--WISEMETA: clientCredentialType="[SDK_CRED_PROT]"-->
             <transport clientCredentialType="Ntlm" />
