Refact of text formatting/normalization

--- a/DomainTest/Teleopti.Ccc.DomainTest.csproj
+++ b/DomainTest/Teleopti.Ccc.DomainTest.csproj
@@ -249,6 +249,8 @@
     <Compile Include="Helper\DenormalizeScheduleProjectionTest.cs" />
     <Compile Include="Helper\InitialLoadScheduleProjectionTest.cs" />
     <Compile Include="Helper\LogPointOutputTest.cs" />
+    <Compile Include="Helper\NoFormattingTest.cs" />
+    <Compile Include="Helper\NormalizeTextTest.cs" />
     <Compile Include="Helper\NotificationTest.cs" />
     <Compile Include="Helper\ProcessDenormalizeQueueTest.cs" />
     <Compile Include="Helper\StringExtensionsTest.cs" />
