--- a/.hgignore
+++ b/.hgignore
@@ -53,3 +53,4 @@ symbolmodule.xml
 Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.dll.Config
 *[Tt]est.dll.[Cc]onfig
 *.ncov.bkp
+Teleopti.Ccc.Rta/Teleopti.Ccc.Rta.WebService/RtaWebService.log.1
