changed fetching of people in Permission, using read only objects via SQL instead

--- a/InfrastructureTest/Teleopti.Ccc.InfrastructureTest.csproj
+++ b/InfrastructureTest/Teleopti.Ccc.InfrastructureTest.csproj
@@ -280,6 +280,7 @@
     <Compile Include="Repositories\AbsenceRepositoryTest.cs" />
     <Compile Include="Repositories\ActivityRepositoryTest.cs" />
     <Compile Include="Repositories\AgentDayScheduleTagRepositoryTest.cs" />
+    <Compile Include="Repositories\ApplicationRolePersonRepositoryTest.cs" />
     <Compile Include="Repositories\Audit\AuditSettingRepositoryTest.cs" />
     <Compile Include="Repositories\Audit\AuditTest.cs" />
     <Compile Include="Repositories\Audit\RevisionListenerTest.cs" />
