--- a/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager.Library/Teleopti.Ccc.DBManager.Library.csproj
+++ b/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager.Library/Teleopti.Ccc.DBManager.Library.csproj
@@ -51,7 +51,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseCreator.cs" />
+    <Compile Include="DatabaseFolder.cs" />
     <Compile Include="DatabaseType.cs" />
+    <Compile Include="DbManagerFolder.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="IniFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
