--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -227,6 +227,11 @@
     <Compile Include="Forecasting\Export\SaveForecastToSkillCommand.cs" />
     <Compile Include="Forecasting\Export\SkillExportCombination.cs" />
     <Compile Include="Forecasting\Export\SkillExportSelection.cs" />
+    <Compile Include="Forecasting\ForecastsFile\CsvFileReader.cs" />
+    <Compile Include="Forecasting\ForecastsFile\CsvFileWriter.cs" />
+    <Compile Include="Forecasting\ForecastsFile\CsvFileRow.cs" />
+    <Compile Include="Forecasting\ForecastsFile\ForecastsFileRow.cs" />
+    <Compile Include="Forecasting\ForecastsFile\ForecastsFileValidator.cs" />
     <Compile Include="Forecasting\IntervalLengthServiceLevelSpecification.cs" />
     <Compile Include="Forecasting\TimeDefinition.cs" />
     <Compile Include="Forecasting\UnsavedDaysInfo.cs" />
@@ -1622,6 +1627,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Scheduling\ScheduleTagging\AgentDayScheduleTag.hbm.xml" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
