--- a/Teleopti.Ccc.WinCodeTest/Teleopti.Ccc.WinCodeTest.csproj
+++ b/Teleopti.Ccc.WinCodeTest/Teleopti.Ccc.WinCodeTest.csproj
@@ -511,6 +511,14 @@
     <Compile Include="PeopleAdmin\SameUserCredentialOnOtherCheckerTest.cs" />
     <Compile Include="PeopleAdmin\SendInstantMessageCommandTest.cs" />
     <Compile Include="PeopleAdmin\ShiftCategoryLimitationCombinationTest.cs" />
+    <Compile Include="Permissions\Commands\LoadRolesWithFunctionLightCommandTest.cs" />
+    <Compile Include="Permissions\Commands\LoadPersonsWithFunctionLightCommandTest.cs" />
+    <Compile Include="Permissions\Commands\LoadFunctionsLightCommandTest.cs" />
+    <Compile Include="Permissions\Commands\LoadFunctionsOnPersonLightCommandTest.cs" />
+    <Compile Include="Permissions\Commands\LoadPersonsLightCommandTest.cs" />
+    <Compile Include="Permissions\Commands\LoadRolesOnPersonLightCommandTest.cs" />
+    <Compile Include="Permissions\Commands\LoadRolesLightCommandTest.cs" />
+    <Compile Include="Permissions\PermissionViewerRolesPresenterTest.cs" />
     <Compile Include="Presentation\ReportDetailTest.cs" />
     <Compile Include="Presentation\ReportSettingsHostPresenterTest.cs" />
     <Compile Include="Presentation\ReportSettingsScheduleAuditingModelTest.cs" />
