--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Web.config
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Web.config
@@ -100,7 +100,13 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,DELETE,PUT" type="System.Web.Handlers.TransferRequestHandler" resourceType="Unspecified" requireAccess="Script" preCondition="integratedMode,runtimeVersionv4.0" />
       <add name="Elmah" path="elmah.axd" verb="POST,GET,HEAD" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
     </handlers>
-  </system.webServer>
+		<httpProtocol>
+			<customHeaders>
+				<clear />
+				<add name="X-UA-Compatible" value="IE=edge" />
+			</customHeaders>
+		</httpProtocol>
+	</system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
