Try fix NightlyBuild

--- a/ccnet/ETLNightlyBuild/ETLTeleopti.Analytics.Etl.ServiceHost.exe.config
+++ b/ccnet/ETLNightlyBuild/ETLTeleopti.Analytics.Etl.ServiceHost.exe.config
@@ -13,10 +13,10 @@
     <add key="chunkTimeSpan" value="2"/>
     <add key="isolationLevel" value="ReadUncommitted"/>
     <add key="pmInstallation" value="False"/>
-    <add key="stageConnectionString" value="Data Source=.;Integrated Security=True;Initial Catalog=ETLNightlyBuild_TeleoptiAnalytics"/>
-    <add key="datamartConnectionString" value="Data Source=.;Integrated Security=True;Initial Catalog=ETLNightlyBuild_TeleoptiAnalytics"/>
-    <add key="MessageBroker" value="Data Source=.;Integrated Security=True;Initial Catalog=ETLNightlyBuild_TeleoptiAnalytics"/>
-    <add key="Cube" value="Provider=MSOLAP.3;Integrated Security=SSPI;Persist Security Info=True;Data Source=.;Initial Catalog=ETLNightlyBuild_TeleoptiAnalytics;Client Cache Size=25;Auto Synch Period=10000"/>
+    <add key="stageConnectionString" value="Data Source=.;Integrated Security=True;Initial Catalog=$(AnalyticsDB)"/>
+    <add key="datamartConnectionString" value="Data Source=.;Integrated Security=True;Initial Catalog=$(AnalyticsDB)"/>
+    <add key="MessageBroker" value="Data Source=.;Integrated Security=True;Initial Catalog=$(AnalyticsDB)"/>
+    <add key="Cube" value="Provider=MSOLAP.3;Integrated Security=SSPI;Persist Security Info=True;Data Source=.;Initial Catalog=$(AnalyticsDB);Client Cache Size=25;Auto Synch Period=10000"/>
   </appSettings>
 
 	<log4net>
