refactor release sql excution in the dbmanager

--- a/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager.Library/Teleopti.Ccc.DBManager.Library.csproj
+++ b/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager.Library/Teleopti.Ccc.DBManager.Library.csproj
@@ -51,12 +51,14 @@
   <ItemGroup>
     <Compile Include="DatabaseCreator.cs" />
     <Compile Include="DatabaseFolder.cs" />
+    <Compile Include="DatabaseSchemeCreator.cs" />
     <Compile Include="DatabaseType.cs" />
     <Compile Include="DatabaseVersionInformation.cs" />
     <Compile Include="DbManagerFolder.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="IniFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLBatchExecutor.cs" />
     <Compile Include="Timeouts.cs" />
   </ItemGroup>
   <ItemGroup>
