--- a/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager.Library/Teleopti.Ccc.DBManager.Library.csproj
+++ b/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager.Library/Teleopti.Ccc.DBManager.Library.csproj
@@ -56,9 +56,10 @@
     <Compile Include="DatabaseVersionInformation.cs" />
     <Compile Include="DbManagerFolder.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="ILog.cs" />
     <Compile Include="IniFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SQLBatchExecutor.cs" />
+    <Compile Include="SqlBatchExecutor.cs" />
     <Compile Include="Timeouts.cs" />
   </ItemGroup>
   <ItemGroup>
