--- a/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager.Library/Teleopti.Ccc.DBManager.Library.csproj
+++ b/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager.Library/Teleopti.Ccc.DBManager.Library.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="ILog.cs" />
     <Compile Include="IniFile.cs" />
+    <Compile Include="NullLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlBatchExecutor.cs" />
     <Compile Include="Timeouts.cs" />
