--- a/Win/Teleopti.Ccc.Win.csproj
+++ b/Win/Teleopti.Ccc.Win.csproj
@@ -701,6 +701,12 @@
     <Compile Include="Forecasting\Forms\ExportPages\SelectMultiSiteSkills.Designer.cs">
       <DependentUpon>SelectMultiSiteSkills.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forecasting\Forms\ImportForecast\ImportForecast.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forecasting\Forms\ImportForecast\ImportForecast.Designer.cs">
+      <DependentUpon>ImportForecast.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forecasting\Forms\JobHistory\JobHistoryView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -2475,6 +2481,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forecasting\Forms\ExportPages\SelectMultiSiteSkills.resx">
       <DependentUpon>SelectMultiSiteSkills.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forecasting\Forms\ImportForecast\ImportForecast.resx">
+      <DependentUpon>ImportForecast.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forecasting\Forms\JobHistory\JobHistoryView.resx">
       <DependentUpon>JobHistoryView.cs</DependentUpon>
