test common test data source now creates analytics database schema. for real. Also, now we actually get the correct error message when the dbmanager fails.

--- a/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager.Library/Teleopti.Ccc.DBManager.Library.csproj
+++ b/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager.Library/Teleopti.Ccc.DBManager.Library.csproj
@@ -51,7 +51,7 @@
   <ItemGroup>
     <Compile Include="DatabaseCreator.cs" />
     <Compile Include="DatabaseFolder.cs" />
-    <Compile Include="DatabaseSchemeCreator.cs" />
+    <Compile Include="DatabaseSchemaCreator.cs" />
     <Compile Include="DatabaseType.cs" />
     <Compile Include="DatabaseVersionInformation.cs" />
     <Compile Include="DbManagerFolder.cs" />
