--- a/Win/Teleopti.Ccc.Win.csproj
+++ b/Win/Teleopti.Ccc.Win.csproj
@@ -1096,11 +1096,11 @@
     </Compile>
     <Compile Include="Permissions\PermissionsModule.cs" />
     <Compile Include="Permissions\PermissionsDataHolder.cs" />
-    <Compile Include="Permissions\PermissionViewerRoles.cs">
+    <Compile Include="Permissions\PermissionViewer.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Permissions\PermissionViewerRoles.Designer.cs">
-      <DependentUpon>PermissionViewerRoles.cs</DependentUpon>
+    <Compile Include="Permissions\PermissionViewer.Designer.cs">
+      <DependentUpon>PermissionViewer.cs</DependentUpon>
     </Compile>
     <Compile Include="Permissions\PersonAdapter.cs" />
     <Compile Include="Reporting\ReportUserSelectorAuditingView.cs">
@@ -2635,8 +2635,8 @@
       <SubType>Designer</SubType>
       <DependentUpon>AuthorizationSettingsPanel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Permissions\PermissionViewerRoles.resx">
-      <DependentUpon>PermissionViewerRoles.cs</DependentUpon>
+    <EmbeddedResource Include="Permissions\PermissionViewer.resx">
+      <DependentUpon>PermissionViewer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reporting\ReportUserSelectorAuditingView.resx">
       <DependentUpon>ReportUserSelectorAuditingView.cs</DependentUpon>
