--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -232,6 +232,8 @@
     <Compile Include="Forecasting\ForecastsFile\CsvFileRow.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileRow.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileValidator.cs" />
+    <Compile Include="Forecasting\Import\ForecastFile.cs" />
+    <Compile Include="Forecasting\Import\IForecastFile.cs" />
     <Compile Include="Forecasting\IntervalLengthServiceLevelSpecification.cs" />
     <Compile Include="Forecasting\TimeDefinition.cs" />
     <Compile Include="Forecasting\UnsavedDaysInfo.cs" />
@@ -1627,7 +1629,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Scheduling\ScheduleTagging\AgentDayScheduleTag.hbm.xml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Forecasting\Import\ForecastFile.hbm.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
