--- a/DomainTest/Teleopti.Ccc.DomainTest.csproj
+++ b/DomainTest/Teleopti.Ccc.DomainTest.csproj
@@ -228,6 +228,7 @@
     <Compile Include="Forecasting\ForecastsFile\CsvFileRowTest.cs" />
     <Compile Include="Forecasting\ForecastsFile\CsvFileWriterTest.cs" />
     <Compile Include="Forecasting\ForecastsFile\ForecastsFileValidatorTest.cs" />
+    <Compile Include="Forecasting\Import\ForecastFileTest.cs" />
     <Compile Include="Forecasting\MultisiteDayCloneIssueTest.cs" />
     <Compile Include="Forecasting\SkillDayBug14724Test.cs" />
     <Compile Include="Forecasting\DayHasAboveMaxSeatsTest.cs" />
